--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.8"
-    , "jade": ">= 0.0.1"
-  }
+    "name": "node-unblocker",
+	"description": "Web proxy for evading internet censorship",
+	"author": "Nathan Friedly - http://nfriedly.com",
+    "version": "0.7.1",
+	"repository": "git://github.com/nfriedly/node-unblocker.git",
+    "dependencies": {
+        "redis-url": 	"0.1.x",
+        "redis": 		"0.7.x",
+        "connect": 		"git://github.com/senchalabs/connect.git",
+        "connect-redis": "1.2.x"
+    },
+	"engines": {
+		"node": "0.6.x",
+		"npm":  "1.1.x"
+	},
+	"main": "server"
 }
